Revert "remove all comment to make code clean, should obey license if to distribute"
This reverts commit 58b87efc805f0c5487325084f21458a2fdc3b947.